// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cli should accept an ignore glob 1`] = `
"0 out of 0 file(s) have problems:

"
`;

exports[`cli should fail with invalid config file 1`] = `
"Failed to read config: callToImport.regex \\"(\\\\S+\\" is not a valid RegExp.
"
`;

exports[`cli should print more with verbose flag 1`] = `
"0 out of 1 file(s) have problems:

File - test/fixtures/Test.soy

     No problems were found.


"
`;

exports[`cli should print status when no errors 1`] = `
"0 out of 1 file(s) have problems:

"
`;

exports[`cli should print usage without args 1`] = `
"
  Usage: index [options] <path>


  Options:

    -V, --version          output the version number
    -i, --ignore <ignore>  A glob to ignore files, if passed a directory
    -v, --verbose          Output for all files
    -h, --help             output usage information
"
`;

exports[`cli should recursively look for Soy files if passed a directory 1`] = `
"15 out of 18 file(s) have problems:

File - test/fixtures/BadTernaryElvis.soy

     Use the Elvis (?:) operator instead of a ternary for default values:
     
     $optionalInfo - Line 20


File - test/fixtures/BadWhitespace.soy

     There seems to be extra whitespace on these lines:
     
     Line 8: {@param title: string }


File - test/fixtures/DocParams.soy

     Param declarations in docs is deprecated, see these templates:
     
     render
     otherHelper


File - test/fixtures/InvalidJS.soy

     Failed to parse component (javascript) file


File - test/fixtures/InvalidNamespace.soy

     Parsing failed at 1:1. Expecting:
     '{namespace'


File - test/fixtures/MissingCallImport.soy

     It looks like the following component calls are missing an import:
     
     MyExternalComponent


File - test/fixtures/MissingInternal.soy

     Based on their name, these attributes should have the .internal() config added:
     
     count_


File - test/fixtures/MissingParams.soy

     These params can't be found in STATE or your Class:
     
     optionalInfo
     optionalInfo2
     optionalInfo3


File - test/fixtures/MissingRender.soy

     Cannot find a .render template, do you have a typo?
     
     rander


File - test/fixtures/MissingRequired.soy

     These attributes are required in your Soy Template but not in your Component:
     
     title



     These attributes are .required() in your Component but not in your Template:
     
     description


File - test/fixtures/NoopEvents.soy

     These calls are not components, so their events param will do nothing:
     
     OtherComponent.Helper


File - test/fixtures/SortedParamDeclarations.soy

     These templates need their param declarations sorted:
     
     .render


File - test/fixtures/SortedParams.soy

     Please sort the params in these calls:
     
     OtherComponent.render - Lines 8 to 11


File - test/fixtures/TransformedImport.soy

     It looks like the following component calls are missing an import:
     
     OtherComponent


File - test/fixtures/UnsortedMap.soy

     These map keys should be sorted:
     
     Lines 10 to 12
     Lines 18 to 20


"
`;

exports[`cli should run using config file 1`] = `
"0 out of 1 file(s) have problems:

"
`;

exports[`cli should validate file 1`] = `
"1 out of 1 file(s) have problems:

File - test/fixtures/MissingInternal.soy

     Based on their name, these attributes should have the .internal() config added:
     
     count_


"
`;
